# hilo

./: .bandit.yaml  .devcontainer.json  .flake8  .gitignore  .gitlint  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.dev  LICENSE  README.en.md  README.md  __init__.py  hacs.json  info.md  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg
.github/: FUNDING.yml  dependabot.yml  hacs.yml
.github/workflows/: constraints.txt  labeler.yml  main.yml  release-drafter.yml  release.yml  release_zip.yml  tests.yaml
config/: configuration.yaml
custom_components/hilo/: __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  entity.py  light.py  managers.py  manifest.json  oauth2.py  sensor.py  services.yaml  switch.py
custom_components/hilo/translations/: en.json  fr.json
doc/automations/: Défi_Hilo_Ancrage_AM.yaml  Défi_Hilo_Ancrage_PM.yaml  Défi_Hilo_Préchauffe_AM.yaml  Défi_Hilo_Préchauffe_PM.yaml  Défi_Hilo_Reprise_AM.yaml  Défi_Hilo_Reprise_PM.yaml  Défi_Hilo_Réduction_AM.yaml  Défi_Hilo_Réduction_PM.yaml  MqttPublishTimeThermostatsForReset.yaml  README.md
doc/ideas/: README.md
doc/templates/: README.md  hilosensors.yaml
github/workflows/: release.yaml
scripts/: develop  generate_changelog.sh  remove_energy_states.py  setup  setup_commit_hook.sh
tests/: __init__.py  conftest.py  test_climate.py  test_init.py
tests/fixtures/: all_devices.json
tests/snapshots/: test_climate.ambr
